# blockchain-rpc-blueprint

./: Cargo.toml  Dockerfile  README.md  config.toml
blockchain-rpc-bin/: Cargo.toml  build.rs
blockchain-rpc-bin/src/: main.rs
blockchain-rpc-lib/: Cargo.toml
blockchain-rpc-lib/src/: config.rs  context.rs  error.rs  firewall.rs  lib.rs  rpc.rs
blockchain-rpc-lib/src/jobs/: allow_access.rs  mod.rs  pay_for_access.rs  register_webhook.rs
blockchain-rpc-lib/tests/: e2e.rs
contracts/src/: SecureRpcBlueprint.sol
contracts/src/precompiles/: Services.sol
