[workspace]
resolver = "2"
members = ["blockchain-rpc-lib", "blockchain-rpc-bin"]

[workspace.package]
version = "0.1.0"
description = "A Tangle Blueprint for arbitrary containerized RPC hosting"
edition = "2024"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/blockchain-rpc"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]

[workspace.dependencies]
blockchain-rpc-lib = { path = "blockchain-rpc-lib" }

blueprint-sdk = { git = "https://github.com/tangle-network/blueprint", default-features = false }
tokio = { version = "1", default-features = false }
color-eyre = "0.6"
tower = { version = "0.5", default-features = false }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
