[package]
name = "blockchain-rpc-lib"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }

[dependencies]
# Workspace dependencies
blueprint-sdk = { workspace = true, features = ["std", "tangle", "evm", "macros"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util", "timeout"] }
tracing = { workspace = true }
color-eyre = { workspace = true }

# External dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
eyre = "0.6"
hex = "0.4"
axum = { version = "0.7", features = ["ws", "json"] }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tower-http = { version = "0.5", features = ["trace", "cors", "set-header"] }
reqwest = { version = "0.12", features = ["json"] }                          # For webhooks

# Substrate/Polkadot types
sp-core = { version = "21.0.0", default-features = false, features = ["serde"] }
sp-runtime = { version = "24.0.0", default-features = false }
sp-keyring = "24.0.0"                                                            # For signer types like Sr25519Pair

# Networking & Time
ipnetwork = { version = "0.20", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.5", features = ["serde"] }

# Concurrency
parking_lot = "0.12"
futures = "0.3"
dirs = "6.0.0"
tokio-tungstenite = "0.26.2"

[dev-dependencies]
tempfile = "3"

[package.metadata.blueprint]
manager = { Evm = "ExperimentalBlueprint" }
master_revision = "Latest"

tokio-tungstenite = { version = "0.23", features = ["native-tls"] }

[features]
default = ["std"]
std = ["blueprint-sdk/std"]
